istio/deploy/testdata/helmtest_default.yaml
values: ../../values.yaml
name: istio
namespace: aks-istio-system
helmChartDir: ..
testData: {}
