istio/deploy/testdata/helmtest_mise.yaml
values: ../../values.yaml
name: istio-mise
namespace: aks-istio-system
helmChartDir: ..
testData:
  mise:
    deploy: true
